created aside and added some more css styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Eric Hillman  |  WDD 130</title>
+        <meta name="description" content="eric hillman, wdd130, learning web development">
+        <meta name="author" content="Eric Hillman">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -19,6 +21,11 @@
             <img src="images/profile.webp" alt="Photo of Eric" width="200">
             <p>Hey there and welcome to my site. My name is Eric Hillman and I'm a 32 year old Dad with 4 wonderful kids 7 and under. I'm a Computer Tech for a school board here in Alberta Canada. I'm looking forward to learning more about web design as this is all new to me.</p>
         </main>
+        <aside>
+            <h2>Canada</h2>
+            <img src="images/niagarafalls.webp" alt="Image of Niagara Falls">
+            <p>Canada is the second largest country in the world. The majority of the population lives near the US border. Niagara Falls is one of Canada's iconic landmarks. Canada is best known for maple syrup, poutine, hockey and the general politeness of it's population.</p>
+        </aside>
         <footer>
             <p>&copy;2024 | Eric Hillman | Alberta,Canada</p>
         </footer>
