slight change to description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Eric Hillman  |  WDD 130</title>
-        <meta name="description" content="eric hillman, wdd130, learning web development">
+        <meta name="description" content="eric hillman wdd130 learning web development byui pathway">
         <meta name="author" content="Eric Hillman">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
