--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <header>
             <nav>
+                <!-- This is the navigational links -->
                 <a href="#">Home</a>
                 <a href="wwr">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
