--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="index.html">Home Page</a>
                 <a href="about.html">About</a>
-                <a href="tips.html">Trips</a>
+                <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
