css styling enhancements. grids and flexes

--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
                 <a href="https://facebook.com" target="_blank">Facebook</a>
             </nav> 
         </header>
-        <main>
-            <h1>Eric Hillman  |  WDD 130</h1>
-            <img src="images/profile.webp" alt="Photo of Eric" width="200">
-            <p>Hey there and welcome to my site. My name is Eric Hillman and I'm a 32 year old Dad with 4 wonderful kids 7 and under. I'm a Computer Tech for a school board here in Alberta Canada. I'm looking forward to learning more about web design as this is all new to me. I enjoy everything to do with cars. I hope to be able to build my own race car one day. I'm also starting to get into hunting. I really value the self sufficiency of being to provide meat for my family.</p>
-            <ul class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng" target="_blank">Buenos Aires Argentina</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/washington-d.c.-temple?lang=eng" target="_blank">Washington DC</a></li>
-            </ul>
-        </main>
-        <aside class="box">
-            <h2>Canada</h2>
-            <img src="images/niagarafalls.webp" alt="Image of Niagara Falls">
-            <p>Canada is the second largest country in the world. The majority of the population lives near the US border. Niagara Falls is one of Canada's iconic landmarks. Canada is best known for maple syrup, poutine, hockey and the general politeness of it's population.</p>
-        </aside>
+        <div class="grid">
+            <main>
+                <h1>Eric Hillman  |  WDD 130</h1>
+                <img src="images/profile.webp" alt="Photo of Eric" width="200">
+                <p>Hey there and welcome to my site. My name is Eric Hillman and I'm a 32 year old Dad with 4 wonderful kids 7 and under. I'm a Computer Tech for a school board here in Alberta Canada. I'm looking forward to learning more about web design as this is all new to me. I enjoy everything to do with cars. I hope to be able to build my own race car one day. I'm also starting to get into hunting. I really value the self sufficiency of being to provide meat for my family.</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng" target="_blank">Buenos Aires Argentina</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/washington-d.c.-temple?lang=eng" target="_blank">Washington DC</a></li>
+                </ul>
+            </main>
+            <aside class="box">
+                <h2>Canada</h2>
+                <img src="images/niagarafalls.webp" alt="Image of Niagara Falls">
+                <p>Canada is the second largest country in the world. The majority of the population lives near the US border. Niagara Falls is one of Canada's iconic landmarks. Canada is best known for maple syrup, poutine, hockey and the general politeness of it's population.</p>
+            </aside>
+        </div>
         <footer>
             <p>&copy;2024 | Eric Hillman | Alberta,Canada</p>
         </footer>
