--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/poll-form.css">
     <title>WDD 130 | HTML Form - User Poll</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,24 +18,32 @@
             <fieldset>
                 <legend>Contact Information</legend>
                 <!--form elements will go here-->
-                <label for="fullname">Full Name:</label>
-                <input type="text" id="fullname" name="fullname">
-                <label for="useremail">User Email</label>
-                <input type="email" name="useremail" id="useremail">
+                <div class="form-item column2">
+                    <label for="fullname">Full Name:</label>
+                    <input type="text" id="fullname" name="fullname">
+                </div>
+                <div class="form-item column2">
+                    <label for="useremail">User Email</label>
+                    <input type="email" name="useremail" id="useremail">
+                </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
                 <!--form elements will go here-->
-                <label for="browser">What is your favourite internet browser?</label>
-                <select name="browser" id="browser">
-                    <option value="Chrome">Chrome</option>
-                    <option value="Firefox">Firefox</option>
-                    <option value="Safari">Safari</option>
-                    <option value="Edge">Edge</option>
-                    <option value="Opera">Opera</option>
-                </select>
-                <label for="pet">Do you have a household pet?</label>
-                <input type="checkbox" id="pet" name="pet">
+                <div class="form-item column 1">
+                    <label for="browser">What is your favourite internet browser?</label>
+                    <select name="browser" id="browser">
+                        <option value="Chrome">Chrome</option>
+                        <option value="Firefox">Firefox</option>
+                        <option value="Safari">Safari</option>
+                        <option value="Edge">Edge</option>
+                        <option value="Opera">Opera</option>
+                    </select>
+                </div>
+                <div class="form-item column1">
+                    <label for="pet">Do you have a household pet?</label>
+                    <input type="checkbox" id="pet" name="pet">
+                </div>
                 <label for="feedback">List the places you have lived</label>
                 <textarea name="feedback" id="feedback" rows="4" placeholder="Calgary Alberta, Toronto Ontario, Hamilton Ontario"></textarea>
             </fieldset>
