week05 contact us

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap&family=Merienda:wght@300..900&family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="content">
         <header>
             <img src="images/rafinglogo.png" alt="Logo">
-            <nav>
+            <nav class="headerlinks">
                 <a href="index.html">Home Page</a>
                 <a href="about.html">About</a>
                 <a href="trips.html">Trips</a>
@@ -33,9 +32,9 @@
             </div>
             <section class="history">
                 <h2>History</h2>
-                <p>Radical Rafting was established by Eric Hillman in 2015, who was inspired by the stunning Kicking Horse River in British Columbia. With a love for the outdoors and adventure, he started the company with a few rafts and a focus on exceptional customer experiences.
-                </p>    
-                    <img src="images/history.jpg" alt="Photo of Team">
+                <p>Radical Rafting was established by Eric Hillman in 2015, who was inspired by the stunning Kicking Horse River in British Columbia. With a love for the outdoors and adventure, he started the company with a few rafts and a focus on exceptional customer experiences.</p>    
+                <img src="images/history.jpg" alt="Photo of Team">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure qui similique dolores architecto deserunt officia iusto quia, facilis in ut, corporis amet dolorem rerum placeat quo veritatis, sint sunt! Perspiciatis.</p>
             </section>
             <section class="adventure">
                 <h2>Adventure Awaits You!</h2>
@@ -75,6 +74,5 @@
                 </a>
             </nav>
         </footer>
-    </div>
 </body>
 </html>
