--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -96,7 +96,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy;2024 | Radical Rafting | Eric Hillman</p>
+        <p><a href="https://app.moqups.com/mFCnG9H3tckOkw9mfpDlEqKcFA6gb0TH/view/page/a03e52de8">Wireframe</a>&nbsp; &copy;2024 | Radical Rafting | Eric Hillman</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/facebook.png" alt="Facebook">
